--- a/Mood_Analyzer_Problem/Mood_Analyzer_Problem.csproj
+++ b/Mood_Analyzer_Problem/Mood_Analyzer_Problem.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomMoodAnalyzerException.cs" />
+    <Compile Include="ModeAnalyzerFactory.cs" />
     <Compile Include="MoodAnalyzer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
